WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277633
Fix Internal visionOS build
https://bugs.webkit.org/show_bug.cgi?id=277633
Summary
Fix Internal visionOS build
Jonathan Bedard
Reported
2024-08-05 08:12:16 PDT
In MockNfcService.mm, 'readerSession: didDetectTags:' requires a non-null reader session.
Attachments
Add attachment
proposed patch, testcase, etc.
Jonathan Bedard
Comment 1
2024-08-05 08:12:52 PDT
<
rdar://problem/133215906
>
Jonathan Bedard
Comment 2
2024-08-05 08:15:15 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31721
EWS
Comment 3
2024-08-05 09:05:36 PDT
Committed
281829@main
(192ce769c4d5): <
https://commits.webkit.org/281829@main
> Reviewed commits have been landed. Closing PR #31721 and removing active labels.
EWS
Comment 4
2024-08-05 15:12:36 PDT
Committed
280938.193@safari-7619-branch
(0c30a2baaf29): <
https://commits.webkit.org/280938.193@safari-7619-branch
> Reviewed commits have been landed. Closing PR #1558 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug