Cherry-pick 281829@main (192ce769c4d5). rdar://133235429

Fix Internal visionOS build
    https://bugs.webkit.org/show_bug.cgi?id=277633
    rdar://133215906

    Unreviewed build fix.

    * Source/WebKit/UIProcess/WebAuthentication/Mock/MockNfcService.mm:
    (WebKit::MockNfcService::detectTags const):

    Canonical link: https://commits.webkit.org/281829@main

Canonical link: https://commits.webkit.org/280938.193@safari-7619-branch